# walkie-talkie-v2

./: .gitignore  DEPLOY_NEW_PI.md  LICENSE  README.md  audio_manager.py  audio_smoke_test.py  config.py  design-input-for-v2.md  design-input.md  gemini-creating-google-api-key.md  hardware_smoke_test.py  implementation-plan-v2.md  installation-memo.md  main.py  pyproject.toml  respeaker-2-mic-setup-memo.md  telegram_handler.py  walkie-talkie.env.template  walkie-talkie.service
interfaces/: button.py  pixels.py
source/: audio_manager.py  audio_smoke_test.py  config.py  hardware_smoke_test.py  main.py  mqtt_handler.py  stt_handler.py  telegram_handler.py  v2_pc_verification.py  vosk_transcriber.py  whisper_transcriber.py
source/interfaces/: apa102.py  button.py  pixels.py
